--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js"
+    "test": "echo 'Error: no test specified' && exit 1",  // Temporary placeholder
+    "build": "echo 'Build process here'"  // Temporary placeholder
   },
   "dependencies": {
     "express": "^4.18.2",
