--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "1.0.0",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js"
-    "test": "echo 'Error: no test specified' && exit 1",  // Temporary placeholder
-    "build": "echo 'Build process here'"  // Temporary placeholder
+    "start": "node server.js",
+    "test": "echo 'Error: no test specified' && exit 1",  
+    "build": "echo 'Build process here'"  
   },
   "dependencies": {
     "express": "^4.18.2",
