--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "test": "echo \"No test specified\" && exit 1" ,
+    "test": "jest" ,
     "build": "echo 'Build process here'"  
   },
   "dependencies": {
