--- a/package.json
+++ b/package.json
@@ -1,20 +1,37 @@
 {
-  "name": "planorama-github",
-  "version": "1.0.0",
-  "main": "server.js",
+  "homepage": "https://Yash-Vashishth.github.io/Planorama-Github",
+  "name": "ochi-design-reactjs",
+  "private": true,
+  "version": "0.0.0",
+  "type": "module",
   "scripts": {
-    "start": "node server.js",
-    "test": "jest" ,
-    "build": "echo 'Build process here'"  
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build", 
+    "dev": "vite",
+    "build": "vite build",
+    "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
+    "preview": "vite preview"
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "react": "^17.0.2"
+    "framer-motion": "^11.2.11",
+    "gsap": "^3.12.5",
+    "locomotive-scroll": "^5.0.0-beta.13",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-icons": "^5.2.1"
   },
   "devDependencies": {
-  "jest": "^27.0.0"
-  },
-  "jest": {
-  "testMatch": ["**/?(*.)+(spec|test).[tj]s?(x)"]
+    "@types/react": "^18.2.66",
+    "@types/react-dom": "^18.2.22",
+    "@vitejs/plugin-react": "^4.2.1",
+    "autoprefixer": "^10.4.19",
+    "eslint": "^8.57.0",
+    "eslint-plugin-react": "^7.34.1",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react-refresh": "^0.4.6",
+    "gh-pages": "^6.1.1",
+    "postcss": "^8.4.38",
+    "tailwindcss": "^3.4.4",
+    "vite": "^5.2.0"
   }
 }
